fix z-index

--- a/section6-carro-de-compras/src/styles/CartDetail.scss
+++ b/section6-carro-de-compras/src/styles/CartDetail.scss
@@ -4,8 +4,9 @@
     margin-top: 10px;
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.3);
     border-radius: 24px;
-    width: 400px;
-    right: 50px,
+    width: 450px;
+    right: 50px;
+    z-index: 1;
 }
 
 .cart-detail__list {
